@@ -1,4 +1,8 @@
 # define new generic functions
-setGeneric("seqClose", function(object, ...) standardGeneric("seqClose"))
-setGeneric("seqSetFilter", function(object, ...) standardGeneric("seqSetFilter"))
+setGeneric("seqClose", function(object, ...)
+    standardGeneric("seqClose"))
+
+setGeneric("seqSetFilter", function(object, variant.sel, ...)
+    standardGeneric("seqSetFilter"))
+
 # setGeneric("seqAppend", function(object, ...) standardGeneric("seqAppend"))
